# eco-backend

./: docker-compose.yml  readme.md  testing.sh
blackhole/: config.toml
database/: dataset.sql
generator/: data.json
golang/: Dockerfile  go.mod  go.sum  main.go
java/: Dockerfile  pom.xml
java-springboot/: Dockerfile
nodejs/: package-lock.json  package.json
nodejs-express/: Dockerfile  package-lock.json  package.json
nodejs-express/src/: main.js  publish.js  status.js
nodejs/src/: main.js  model.js
nodejs/src/controller/: index.js  publish.js  search.js
php/: Dockerfile
php-laravel/routes/: web.php
php/app/Models/: LogEntry.php
php/database/factories/: LogEntryFactory.php
php/routes/: web.php
prometheus/: config.yml
python/: app.py  requirements.txt
python-flask/: Dockerfile  app.py
results/golang/: bench-publish.txt  bench-search.txt  bench.json  build.json  start.json
results/java/: bench-publish.txt  bench.json  build.json  start.json
results/nodejs/: bench-publish.txt  bench-search.txt  bench.json  build.json  start.json
results/php/: bench-publish.txt  bench-search.txt  bench.json  build.json  start.json
results/python/: bench-publish.txt  bench-search.txt  bench.json  build.json  start.json
results/rust/: bench-publish.txt  bench-search.txt  build.json  start.json
rust/: Cargo.toml
rust-actix/: Cargo.toml  Dockerfile
rust-actix/src/: main.rs
rust/src/: main.rs  model.rs  publish.rs  search.rs
scripts/: all.sh  bench-get.sh  bench-post.sh  bench.sh  binaries.sh  build.sh  data.json  run.sh  start.sh
(+12 files in other folders)
